--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <h1>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h1>
 
-<p>This repository is primarily meant for those researchers who want to dive into the FFT-based micro-mechanical solver. It contains several small, single-file, Python scripts which should <a href="http://arxiv.org/abs/1603.08893">lower the learning curve</a> [1]. These examples depend only on standard Python and its scientific libraries <a href="http://www.numpy.org">NumPy</a> and <a href="https://www.scipy.org">SciPy</a>. Note that Python/NumPy are widely used, and are freely available for all operating systems; no custom software or libraries, housing hidden layers of complexity, are used.</p>
+<p>This repository is primarily meant for those researchers who want to dive into the FFT-based micro-mechanical solver. It contains several small, single-file, Python scripts which should lower the learning curve <a href="http://arxiv.org/abs/1603.08893">[1]</a>. These examples depend only on standard Python and its scientific libraries <a href="http://www.numpy.org">NumPy</a> and <a href="https://www.scipy.org">SciPy</a>. Note that Python/NumPy are widely used, and are freely available for all operating systems; no custom software or libraries, housing hidden layers of complexity, are used.</p>
 
 <p>Since different approaches exists for this type of numerical method, and since there are many styles and programming languages, <strong>anyone is invited to contribute</strong> by:</p>
 
@@ -54,9 +54,9 @@
 <a id="available-examples" class="anchor" href="#available-examples" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Available examples</h1>
 
 <ol>
-<li><p><code>finite-strain/hyper-elasticity.py</code> and <code>finite-strain/hyper-elasticity_even.py</code>: the main example of Ref.[1] featuring a simple hyper-elastic model in finite strain. As described in Ref. [1] the projection operator is slightly different for even or odd grids, here in included in two files. <em>Great to get started</em>.</p></li>
-<li><p><code>finite-strain/elasto-plasticity.py</code> and <code>finite-strain/elasto-plasticity_even.py</code>: an extension of example 1 with the Simo elasto-plastic model for finite strain [1]. Furthermore, the definition of the projection operator is vectorized.</p></li>
-<li><p><code>finite-strain/elasto-plasticity_2D-micrograph</code>: a realistic example to simulate the mechanical response of the 2-D micrograph of dual-phase steel [1]. Compared to example 2 this example deals with assuming 2-D plane strain.</p></li>
+<li><p><code>finite-strain/hyper-elasticity.py</code> and <code>finite-strain/hyper-elasticity_even.py</code>: the main example of Ref.<a href="http://arxiv.org/abs/1603.08893">[1]</a> featuring a simple hyper-elastic model in finite strain. As described in Ref. <a href="http://arxiv.org/abs/1603.08893">[1]</a> the projection operator is slightly different for even or odd grids, here in included in two files. <em>Great to get started</em>.</p></li>
+<li><p><code>finite-strain/elasto-plasticity.py</code> and <code>finite-strain/elasto-plasticity_even.py</code>: an extension of example 1 with the Simo elasto-plastic model for finite strain <a href="http://arxiv.org/abs/1603.08893">[1]</a>. Furthermore, the definition of the projection operator is vectorized.</p></li>
+<li><p><code>finite-strain/elasto-plasticity_2D-micrograph</code>: a realistic example to simulate the mechanical response of the 2-D micrograph of dual-phase steel <a href="http://arxiv.org/abs/1603.08893">[1]</a>. Compared to example 2 this example deals with assuming 2-D plane strain.</p></li>
 </ol>
 
 <h1>
