Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 <li><a href="#references">References</a></li>
 </ul>
 
-<blockquote>
-<p>This repository is distributed under an MIT license. In layman's term you are free to do what you want with it. We just kindly request you to cite our papers that form the basis for this repository, and encourage you to be equally open with your code.</p>
-</blockquote>
+<p><em>This repository is distributed under an MIT license. In layman's term you are free to do what you want with it. We just kindly request you to cite our papers that form the basis for this repository, and encourage you to be equally open with your code.</em></p>
 
 <h1>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h1>
