--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>GooseFFT by tdegeus</title>
+    <title>GooseFFT by Tom de Geus</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Goosefft</h1>
+        <h1>GooseFFT</h1>
         <h2>Micro mechanical computations with the FFT-based method</h2>
         <a href="https://github.com/tdegeus/GooseFFT" class="button"><small>View project on</small> GitHub</a>
       </div>
