--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             .tar.gz file
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/tdegeus/GooseFFT"></a> is maintained by <a href="https://github.com/tdegeus">tdegeus</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/tdegeus/GooseFFT"></a> maintained by <a href="https://github.com/tdegeus">Tom de Geus</a>.</p>
 
         </aside>
       </div>
